--- a/app.yaml
+++ b/app.yaml
@@ -24,9 +24,12 @@ handlers:
 - url: /js
   static_dir: assets/js
 
-- url: /main
+- url: /.*
   script: main.app
 
 libraries:
 - name: webapp2
   version: "2.5.2"
+
+- name: jinja2
+  version: "2.6"
